Admin publish panel and post panel

--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/SimpleTreeByKey_Items.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/SimpleTreeByKey_Items.cshtml
@@ -8,14 +8,14 @@
 {
     var item = cat;
     <div>
-        <div>
-            <span style="border-bottom: 1px solid; padding-left: 20px;" onclick="onSimpleCatNodeClick(this,'@targetKey','@item.Node.Id','@item.Node.Name')">
+        <div class="node">
+            <span onclick="onSimpleCatNodeClick(this,'@targetKey','@item.Node.Id','@item.Node.Name')">
                 @Html.DisplayFor(m => item.Node.Name)
             </span>
         </div>
         @if (cat.Childs != null && cat.Childs.Any())
         {
-            <div style="border-left: 1px solid; margin-left: 20px;">
+            <div class="childs">
                 @Html.Partial("SimpleTreeByKey_Items", cat.Childs)
             </div>
         }
