--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Layout.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     @RenderSection("scripts", required: false)
 </head>
 <body>
+    @Html.Partial("Popup")
     <div class="sidemenu tie-menu">
         @Html.Partial("_SideMenu")
     </div>
