--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_SecondryContents.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_SecondryContents.cshtml
@@ -5,6 +5,7 @@
     <span class="clearbox"></span>
 </div>
 <div id="secondry_content"></div>
+<div class="previous"></div>
 
 <script type="text/javascript">
     function onSecondryExpanderClick() {
@@ -14,10 +15,5 @@
             $('.secondry-content').removeClass('pin-secondry');
             $('.mainpart-con').removeClass('pin-secondry');
         }
-    }
-
-    function onSecondryPinClick() {
-        $('.secondry-content').toggleClass('pin-secondry');
-        $('.mainpart-con').toggleClass('pin-secondry');
     }
 </script>
