--- a/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
@@ -11,6 +11,7 @@
 @grayLight4: #d7d7d7;
 @grayLight5: #E1E1E1;
 @grayLight6: #EEEEEE;
+@grayLight6-1: #F1F1F1;
 @grayLight7: #F5F5F5;
 @white: #fff;
 
@@ -41,3 +42,8 @@
 @mint1Color: #47cfad;
 @mint2Color: #37bc98;
 @bitterSweet1Color: #fc6e51;
+@bitterSweet2Color: #e9573f;
+@orangeColor: #f39c12;
+@carrotColor: #e67e22;
+@pitterRiverColor: #3498db;
+@blizeHoleColor: #2980b9;
