--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Header.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Header.cshtml
@@ -12,14 +12,18 @@
     }
 }
 
-
-<div class="col-md-6">
-    
+<div class="col-lg-9 col-xs-7">
+    <div class="row global-messagebox error">
+        <div class="col-sm-2 date hidden-xs"></div>
+        <div class="col-sm-10 message">
+            <span></span>
+        </div>
+    </div>
 </div>
 
-<div class="col-md-6">
-    <a class="admin-avatar" href="#">
-        <div class="image">
+<div class="col-lg-3 col-xs-5">
+    <div class="profile-data">
+        <a class="image" href="#">
             @if (avatarAddress.IsNothing())
             {
                 <span class="glyphbox">&#xe605</span>
@@ -28,8 +32,9 @@
             {
                 <img alt="" src="@Url.Content(avatarAddress)" />
             }
-        </div>
-        <div class="name">@showname</div>
+        </a>
+        <a class="name hidden-xs" href="#">@showname</a>
+        <a class="exit" href="@Url.Action("LogOff", "Account", new { Area = "" })">خروج</a>
         <div class="clearbox"></div>
-    </a>
+    </div>
 </div>
