--- a/Squirrel/Squirrel.Web/Content/themes/vone/admin.css
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/admin.css
@@ -15,6 +15,7 @@ html body {
 }
 html a {
   text-decoration: none;
+  color: #464646;
   -moz-transition: color, background-color linear, linear 0.2s;
   -o-transition: color, background-color linear, linear 0.2s;
   -webkit-transition: color, background-color linear, linear 0.2s;
@@ -22,6 +23,7 @@ html a {
 }
 html a:hover {
   text-decoration: none;
+  color: #b7b7b7;
 }
 html a:active {
   text-decoration: none;
@@ -40,6 +42,375 @@ html a:focus {
 .siteglyphbox {
   font: 20px SquirrelFont;
   text-align: center;
+}
+.divider-blank10 {
+  display: block;
+  width: 100%;
+  height: 10px;
+}
+.divider-blank15 {
+  display: block;
+  width: 100%;
+  height: 15px;
+}
+.divider-blank20 {
+  display: block;
+  width: 100%;
+  height: 20px;
+}
+.divider-blank30 {
+  display: block;
+  width: 100%;
+  height: 30px;
+}
+.divider-blank50 {
+  display: block;
+  width: 100%;
+  height: 50px;
+}
+.hline {
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #e1e1e1;
+  margin: 15px 0;
+}
+.box-uptitle {
+  display: block;
+  line-height: 42px;
+}
+.box-uptitle .text {
+  display: block;
+  float: right;
+  font-size: .7em;
+  color: #7d7d7d;
+}
+.box-uptitle .links {
+  display: block;
+  float: left;
+  margin-right: 5px;
+}
+.flatbox {
+  background: #fff;
+  padding: 30px;
+  border-radius: 4px;
+  border: 1px solid #e1e1e1;
+  box-shadow: 0 0 1px 0 #ffffff;
+}
+.flatbox .commontext {
+  font-size: .8em;
+}
+.flatbox .commontext .topic {
+  color: #b7b7b7;
+}
+.flatbox .input-con {
+  margin: 0 -30px -30px -30px;
+  padding: 30px;
+  background-color: #f1f1f1;
+  border-radius: 0 0 4px 4px;
+}
+.flatbox .line {
+  display: block;
+  height: 1px;
+  background-color: #e1e1e1;
+}
+.flatbox .full-line {
+  margin: 0 -30px;
+  display: block;
+  height: 1px;
+  background-color: #e1e1e1;
+}
+.flatbox .no-content {
+  text-align: center;
+  font-size: .7em;
+  color: #a1a1a1;
+  line-height: 30px;
+}
+.button {
+  display: inline-block;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0 40px;
+  cursor: pointer;
+  height: 44px;
+  line-height: 44px;
+  vertical-align: middle;
+  font-size: .7em;
+  text-align: center;
+  border-radius: 3px;
+  background-color: transparent;
+  color: #959595;
+  border: 1px solid #cccccc;
+  -moz-transition: color, border-color linear, linear 0.2s;
+  -o-transition: color, border-color linear, linear 0.2s;
+  -webkit-transition: color, border-color linear, linear 0.2s;
+  transition: color, border-color linear, linear 0.2s;
+}
+.button .glyphbox,
+.button .siteglyphbox {
+  font-size: 24px;
+  line-height: 44px;
+  vertical-align: middle;
+}
+.button:focus {
+  outline: none;
+  color: #a1a1a1;
+}
+.button.submit {
+  border-color: #3498db;
+  color: #2980b9;
+}
+.button.alert {
+  border-color: #f39c12;
+  color: #e67e22;
+}
+.button.error {
+  border-color: #fc6e51;
+  color: #e9573f;
+}
+.button.primary {
+  border-color: #47cfad;
+  color: #37bc98;
+}
+.button:hover {
+  border-color: #d7d7d7;
+  color: #b7b7b7;
+}
+.button:active {
+  border-color: #b7b7b7;
+  color: #a1a1a1;
+}
+.button.inline {
+  margin-bottom: 15px;
+}
+.button.icon {
+  font: 20px pe7;
+  font-size: 26px;
+  line-height: 42px;
+}
+.button.tile {
+  padding: 0;
+  width: 44px;
+}
+.button.circle {
+  padding: 0;
+  width: 44px;
+  text-align: center;
+  border-radius: 100px;
+}
+.button.circle .glyphbox,
+.button.circle .siteglyphbox {
+  font-size: 22px;
+}
+.button.small {
+  height: 34px;
+  line-height: 32px;
+  font-size: .6em;
+  padding: 0 30px;
+}
+.button.small.tile {
+  padding: 0;
+  width: 34px;
+}
+.button.small .glyphbox,
+.button.small .siteglyphbox {
+  font-size: 20px;
+  line-height: 32px;
+}
+.button.large {
+  height: 54px;
+  line-height: 52px;
+  font-size: .8em;
+}
+.button.full {
+  width: 100%;
+}
+.pager-row {
+  display: block;
+  text-align: center;
+  line-height: 0;
+}
+.pager-row .pager {
+  display: inline-block;
+  overflow: hidden;
+  direction: ltr;
+  margin: 0;
+  vertical-align: middle;
+}
+.pager-row .pager .page {
+  display: block;
+  float: left;
+  background-color: #ffffff;
+  color: #464646;
+  font-size: .65em;
+  line-height: 34px;
+  width: 34px;
+  height: 34px;
+  text-align: center;
+  overflow: hidden;
+  cursor: pointer;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #e1e1e1;
+  margin-left: -1px;
+}
+.pager-row .pager .page:hover {
+  background-color: #eeeeee;
+  color: #7d7d7d;
+}
+.pager-row .pager .page.glyphbox {
+  font-size: 24px;
+  line-height: 46px;
+}
+.pager-row .pager .page.current {
+  background-color: #eeeeee;
+  color: #b7b7b7;
+  cursor: default;
+}
+.pager-row .pager .page:first-child {
+  margin-left: 0;
+  border-radius: 3px 0 0 3px;
+}
+.pager-row .pager .page:last-child {
+  border-radius: 0 3px 3px 0;
+}
+.pager-row .pager .far {
+  display: inline-block;
+  background-color: transparent;
+  color: #cccccc;
+  font-size: 26px;
+  line-height: 48px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  overflow: hidden;
+}
+.form-row {
+  line-height: 0;
+}
+.form-row label,
+.form-row .title {
+  display: block;
+  margin-bottom: 0;
+  font-weight: normal;
+  font-size: .7em;
+  line-height: 30px;
+}
+.form-row .validation {
+  font-size: .6em;
+  line-height: 28px;
+  color: #fc6e51;
+}
+.form-row .char-counter {
+  font-size: .6em;
+  line-height: 26px;
+  direction: ltr;
+  text-align: left;
+  color: #a1a1a1;
+}
+.form-row .char-counter .count {
+  color: #2980b9;
+}
+.form-row .char-counter.overflow .count {
+  color: #e9573f;
+}
+.textbox,
+.textarea {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  vertical-align: middle;
+  height: 44px;
+  width: 100%;
+  margin: 0;
+  padding: 0 15px;
+  font-size: .8em;
+  background-color: #ffffff;
+  color: #898989;
+  border: 1px solid #e1e1e1;
+  border-radius: 3px;
+  -moz-transition: border-color, color linear, linear 0.15s;
+  -o-transition: border-color, color linear, linear 0.15s;
+  -webkit-transition: border-color, color linear, linear 0.15s;
+  transition: border-color, color linear, linear 0.15s;
+}
+.textbox:focus,
+.textarea:focus {
+  border-color: #cccccc;
+  color: #464646;
+  outline: none;
+}
+.textbox.inline,
+.textarea.inline {
+  margin-left: 15px;
+}
+.textbox.small,
+.textarea.small {
+  height: 32px;
+  padding: 0 10px;
+  font-size: .7em;
+}
+.textbox.full,
+.textarea.full {
+  width: 100%;
+}
+.textbox.height2,
+.textarea.height2 {
+  height: 118px;
+}
+.textbox.height3,
+.textarea.height3 {
+  height: 192px;
+}
+.textbox.readonly,
+.textarea.readonly {
+  background-color: #f5f5f5;
+}
+.textbox.readonly:focus,
+.textarea.readonly:focus {
+  border-color: #e1e1e1;
+  color: #898989;
+  outline: none;
+}
+.textarea {
+  padding-top: 10px;
+  line-height: 30px;
+  height: 170px;
+}
+.textarea.small {
+  padding-top: 10px;
+  line-height: 30px;
+  height: 170px;
+}
+.textarea.fix {
+  resize: none;
+}
+.textarea.vertical {
+  resize: vertical;
+}
+.select {
+  width: 100%;
+  height: 44px;
+  background-color: #ffffff;
+  color: #898989;
+  border: 1px solid #e1e1e1;
+  font-size: .8em;
+  -moz-transition: border-color, color linear, linear 0.15s;
+  -o-transition: border-color, color linear, linear 0.15s;
+  -webkit-transition: border-color, color linear, linear 0.15s;
+  transition: border-color, color linear, linear 0.15s;
+}
+.select.small {
+  height: 32px;
+  font-size: .7em;
+}
+.select:focus {
+  border-color: #cccccc;
+  color: #464646;
+  outline: none;
 }
 /* ------ */
 /* ------ */
@@ -148,40 +519,229 @@ html a:focus {
   height: 65px;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.05);
 }
-.header-con .header .admin-avatar {
-  padding-top: 10px;
+.header-con .header .global-messagebox {
+  height: 65px;
+  overflow: hidden;
+}
+.header-con .header .global-messagebox .date {
+  font-size: .6em;
+  line-height: 65px;
+  color: #cccccc;
+  text-align: left;
+}
+.header-con .header .global-messagebox .message {
+  line-height: 65px;
+  color: #7d7d7d;
+}
+.header-con .header .global-messagebox .message span {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: .6em;
+  line-height: 32px;
+}
+.header-con .header .global-messagebox.error .message {
+  color: #f39c12;
+}
+.header-con .header .global-messagebox.success .message {
+  color: #47cfad;
+}
+.header-con .header .profile-data {
+  direction: ltr;
+  height: 65px;
+  overflow: hidden;
+}
+.header-con .header .profile-data a {
   display: block;
-  color: #464646;
-}
-.header-con .header .admin-avatar:hover {
-  color: #37bc98;
-}
-.header-con .header .admin-avatar .image {
   float: left;
-  background-color: #eeeeee;
   line-height: 45px;
+  margin-top: 10px;
+}
+.header-con .header .profile-data .image {
+  background-color: #eeeeee;
   width: 45px;
   height: 45px;
   text-align: center;
   border-radius: 100%;
   overflow: hidden;
 }
-.header-con .header .admin-avatar .image .glyphbox {
+.header-con .header .profile-data .image .glyphbox {
   display: inline-block;
   vertical-align: middle;
   font-size: 32px;
   color: #e1e1e1;
 }
-.header-con .header .admin-avatar .image img {
+.header-con .header .profile-data .image img {
   vertical-align: middle;
   width: 45px;
   height: 45px;
 }
-.header-con .header .admin-avatar .name {
-  float: left;
-  line-height: 45px;
+.header-con .header .profile-data .name {
   padding-left: 15px;
   font-size: .7em;
+}
+.header-con .header .profile-data .exit {
+  font-size: .5em;
+  color: #cccccc;
+  margin-left: 15px;
+}
+.popup-con {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 200;
+  display: none;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.popup-con.showed {
+  display: flex;
+}
+.popup-con .alertbox {
+  display: none;
+  background-color: #ffffff;
+  width: 700px;
+  text-align: right;
+  margin: auto;
+}
+.popup-con .alertbox .question {
+  font-weight: 200;
+  font-size: .9em;
+  padding: 50px 30px;
+  line-height: 35px;
+}
+.popup-con .alertbox .choice {
+  overflow: hidden;
+}
+.popup-con .alertbox .choice > div {
+  float: right;
+  width: 50%;
+  color: #ffffff;
+  text-align: center;
+  line-height: 100px;
+  font-size: .9em;
+  font-weight: 300;
+  cursor: pointer;
+  -moz-transition: background-color linear 0.2s;
+  -o-transition: background-color linear 0.2s;
+  -webkit-transition: background-color linear 0.2s;
+  transition: background-color linear 0.2s;
+}
+.popup-con .alertbox .choice > div.yes {
+  background-color: #47cfad;
+}
+.popup-con .alertbox .choice > div.yes:hover {
+  background-color: #37bc98;
+}
+.popup-con .alertbox .choice > div.no {
+  background-color: #cccccc;
+}
+.popup-con .alertbox .choice > div.no:hover {
+  background-color: #b7b7b7;
+}
+@media (max-width: 760px) {
+  .popup-con .alertbox {
+    width: auto;
+    margin: auto 30px;
+  }
+  .popup-con .alertbox .question {
+    font-weight: 200;
+    font-size: .8em;
+    padding: 50px 30px;
+    line-height: 32px;
+  }
+  .popup-con .alertbox .choice > div {
+    line-height: 90px;
+    font-size: .8em;
+  }
+}
+.popup-con .dynamic-content {
+  display: none;
+  background-color: #ffffff;
+  width: 1200px;
+  text-align: right;
+  margin: 30px auto;
+  overflow: auto;
+}
+.popup-con .dynamic-content .topic {
+  font-weight: 200;
+  font-size: .9em;
+  margin: 30px;
+  line-height: 35px;
+}
+.popup-con .dynamic-content .content {
+  margin: 30px;
+}
+.popup-con .dynamic-content .content > .image {
+  text-align: center;
+}
+.popup-con .dynamic-content .content > .image img {
+  max-width: 100%;
+}
+@media (max-width: 1260px) {
+  .popup-con .dynamic-content {
+    width: auto;
+    margin: 30px;
+  }
+}
+.popup-con .file-popup .item {
+  padding: 15px;
+  margin-bottom: 30px;
+  height: 150px;
+  text-align: center;
+  border: 1px solid #e1e1e1;
+  position: relative;
+  cursor: pointer;
+}
+.popup-con .file-popup .item img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.popup-con .file-popup .item .glyphbox {
+  line-height: 80px;
+  font-size: 4em;
+  color: #cccccc;
+}
+.popup-con .file-popup .item .info {
+  position: absolute;
+  top: auto;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding-top: 3px;
+}
+.popup-con .file-popup .item .info .name {
+  font-size: .65em;
+}
+.popup-con .file-popup .item .info .size {
+  font-size: .55em;
+}
+.popup-con .file-popup .item:before {
+  position: absolute;
+  content: "";
+  font: 20px pe7;
+  font-size: 0;
+  line-height: 148px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  color: #37bc98;
+  -moz-transition: background-color, font-size linear, linear 0.1s, 0.25s;
+  -o-transition: background-color, font-size linear, linear 0.1s, 0.25s;
+  -webkit-transition: background-color, font-size linear, linear 0.1s, 0.25s;
+  transition: background-color, font-size linear, linear 0.1s, 0.25s;
+}
+.popup-con .file-popup .item.choosed:before {
+  font-size: 5em;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 .mainpart-con {
   background-color: #f5f5f5;
@@ -204,15 +764,18 @@ html a:focus {
   bottom: 0;
   left: 0;
   width: 400px;
-  overflow: hidden;
+  overflow: auto;
   z-index: 90;
-  -moz-transition: width linear 0.15s;
-  -o-transition: width linear 0.15s;
-  -webkit-transition: width linear 0.15s;
-  transition: width linear 0.15s;
+  -moz-transition: left linear 0.15s;
+  -o-transition: left linear 0.15s;
+  -webkit-transition: left linear 0.15s;
+  transition: left linear 0.15s;
 }
 .secondry-content .expander {
   padding: 10px 0;
+  width: 100%;
+  height: 46px;
+  overflow: hidden;
 }
 .secondry-content .expander .glyphbox {
   display: block;
@@ -233,11 +796,91 @@ html a:focus {
 }
 .secondry-content .expander .glyphbox.pin {
   display: block;
-  margin-right: 5px;
+  margin-right: 10px;
   font-size: 18px;
+  opacity: 1;
+}
+.secondry-content #secondry_content {
+  margin: 30px;
+  overflow: hidden;
+}
+.secondry-content #secondry_content .topic-row {
+  font-size: .65em;
+  color: #959595;
+  border-bottom: 1px solid #cccccc;
+  line-height: 32px;
+}
+.secondry-content #secondry_content .detail-row {
+  line-height: 26px;
+  font-size: .6em;
+  /*.notification {
+                display: inline-block;
+                vertical-align: middle;
+                background-color: #3498db;
+                height: 22px;
+                min-width: 22px;
+                padding: 0 5px;
+                color: #fff;
+                border-radius: 22px;
+                text-align: center;
+                line-height: 26px;
+            }*/
+}
+.secondry-content #secondry_content .detail-row .title {
+  color: #a1a1a1;
+}
+.secondry-content #secondry_content .detail-row .value {
+  color: #464646;
+}
+.secondry-content #secondry_content .detail-row > a {
+  color: #3498db;
+}
+.secondry-content #secondry_content .detail-row > a:hover {
+  color: #b7b7b7;
+}
+.secondry-content #secondry_content .detail-row.postitem {
+  padding-bottom: 5px;
+}
+.secondry-content #secondry_content .detail-row.postitem:hover .value {
+  text-decoration: underline;
+}
+.secondry-content #secondry_content .detail-row .glyphbox {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 22px;
+  cursor: pointer;
+}
+.secondry-content #secondry_content .detail-row .glyphbox:hover {
+  color: #b7b7b7;
+}
+.secondry-content #secondry_content .categories-tree {
+  line-height: 20px;
+  font-size: .6em;
+  border: 1px solid #e1e1e1;
+  padding: 10px;
+  margin-top: 5px;
+  background-color: #ffffff;
+  border-radius: 3px;
+  max-height: 202px;
+  overflow: auto;
+}
+.secondry-content #secondry_content .categories-tree .node span {
+  cursor: pointer;
+}
+.secondry-content #secondry_content .categories-tree .childs {
+  padding-right: 20px;
+}
+.secondry-content #secondry_content #publishdate_edit_con {
+  display: none;
+  border: 1px solid #cccccc;
+  padding: 10px;
+}
+.secondry-content .previous {
+  display: none;
 }
 .secondry-content.tie-secondry {
-  width: 50px;
+  left: -350px;
+  overflow: hidden;
 }
 .secondry-content.tie-secondry .glyphbox.doexpand {
   display: block;
@@ -252,12 +895,127 @@ html a:focus {
   background-color: #37bc98;
   color: #ffffff;
 }
+.mainpart {
+  margin: 0;
+}
+.mainpart .topics-list .item {
+  line-height: 36px;
+}
+.mainpart .topics-list .item .glyphbox {
+  display: block;
+  float: right;
+  vertical-align: middle;
+  font-size: 32px;
+  margin-left: 5px;
+}
+.mainpart .topics-list .item .glyphbox.published {
+  color: #47cfad;
+}
+.mainpart .topics-list .item .glyphbox.unpublished {
+  color: #cccccc;
+}
+.mainpart .topics-list .item .text {
+  vertical-align: middle;
+  cursor: pointer;
+  font-size: .75em;
+}
+.mainpart .post-edit-con .header-image {
+  overflow: hidden;
+  margin: -30px;
+}
+.mainpart .post-edit-con .header-image .image {
+  float: right;
+  margin-left: 30px;
+  padding: 30px;
+  border-left: 1px solid #e1e1e1;
+}
+.mainpart .post-edit-con .header-image .image img {
+  height: 75px;
+}
+.mainpart .post-edit-con .header-image .info {
+  float: right;
+  line-height: 37px;
+  padding: 30px 0;
+}
+.mainpart .post-edit-con .header-image .info .name {
+  font-size: .7em;
+  height: 37px;
+  overflow: hidden;
+}
+.mainpart .post-edit-con .header-image .info .size {
+  font-size: .6em;
+  overflow: hidden;
+  color: #b7b7b7;
+}
+.mainpart .post-edit-con .attachments-list .item {
+  overflow: hidden;
+}
+.mainpart .post-edit-con .attachments-list .item .name {
+  float: right;
+  font-size: .7em;
+  line-height: 36px;
+  height: 36px;
+  overflow: hidden;
+  margin-left: 15px;
+}
+.mainpart .post-edit-con .attachments-list .item .size {
+  float: right;
+  font-size: .6em;
+  line-height: 36px;
+  color: #b7b7b7;
+  margin-left: 15px;
+}
+.mainpart .post-edit-con .attachments-list .item .action {
+  float: right;
+  line-height: 36px;
+}
+.mainpart .post-edit-con .tags-list {
+  overflow: hidden;
+}
+.mainpart .post-edit-con .tags-list .item {
+  display: block;
+  float: right;
+  padding: 0 15px;
+  margin: 0 0 10px 10px;
+  vertical-align: middle;
+  font-size: .65em;
+  background-color: #3498db;
+  line-height: 30px;
+  color: #ffffff;
+  font-weight: 200;
+  position: relative;
+}
+.mainpart .post-edit-con .tags-list .item:before {
+  content: '';
+  font: 20px pe7;
+  font-size: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  text-align: center;
+  line-height: 30px;
+  cursor: pointer;
+  -moz-transition: background-color, font-size linear, linear 0.2s, 0.2s;
+  -o-transition: background-color, font-size linear, linear 0.2s, 0.2s;
+  -webkit-transition: background-color, font-size linear, linear 0.2s, 0.2s;
+  transition: background-color, font-size linear, linear 0.2s, 0.2s;
+}
+.mainpart .post-edit-con .tags-list .item:hover:before {
+  background-color: #fc6e51;
+  font-size: 22px;
+}
 @media (min-width: 960px) and (max-width: 1200px) {
   .mainpart-con.pin-secondry {
     padding-left: 330px;
   }
   .secondry-content {
     width: 330px;
+  }
+  .secondry-content.tie-secondry {
+    left: -280px;
   }
 }
 @media (min-width: 360px) and (max-width: 959px) {
@@ -267,11 +1025,14 @@ html a:focus {
   .secondry-content {
     width: 280px;
   }
+  .secondry-content.tie-secondry {
+    left: -230px;
+  }
   .secondry-content .expander .glyphbox.pin {
     display: none;
   }
 }
-@media (max-width: 360px) {
+@media (max-width: 359px) {
   .mainpart-con {
     padding-left: 50px;
   }
